<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:context=".ui.MainActivity"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="645dp"
            android:background="@color/bgcolor"
            android:orientation="vertical">


            <TextView
                android:id="@+id/item_custom_text"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/central_park"
                android:textAlignment="center"
                android:textColor="#050303"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.695"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="383dp"
                android:layout_height="180dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_custom_text"
                app:layout_constraintVertical_bias="0.015"
                app:srcCompat="@drawable/central_park2" />

            <TextView
                android:id="@+id/descripcion2"
                android:layout_width="370dp"
                android:layout_height="217dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/text"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.309" />

            <TextView
                android:id="@+id/ubicacion"
                android:layout_width="248dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:background="#CFD8F8"
                android:gravity="center"
                android:text="@string/list_specs"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textAppearance="@style/Widget.AppCompat.ListView"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/temperatura"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.896"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion2"
                app:layout_constraintVertical_bias="0.933" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="111dp"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="Ubicación:"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/temperatura"
                app:layout_constraintEnd_toStartOf="@+id/ubicacion"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion2"
                app:layout_constraintVertical_bias="0.842" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="112dp"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="Temperatura:"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="248dp"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="#CFD8F8"
                android:gravity="center"
                android:text="@string/temperatura"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textAppearance="@style/Widget.AppCompat.ListView"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.893"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion2"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/ubicacion_central"
                android:layout_width="189dp"
                android:layout_height="38dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:text="Maps del lugar"
                app:layout_constraintBottom_toTopOf="@+id/descripcion2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.45" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Jose Perez" />

    </LinearLayout>
</ScrollView>